Use CSS property 'display: block' to layout the plug-in correctly.
Removed the 'margin' property which is now unnecessary. Verified that the plug-in
renders correctly in full and scale-to-fit, and that the vertical scrollbar is never
shown.

BUG=10925
TEST=none


Review URL: http://codereview.chromium.org/9121029

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@119385 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: f8df07561cb4ec13536e6397de03550553e8aa0c

--- a/remoting/webapp/choice.css
+++ b/remoting/webapp/choice.css
@@ -372,7 +372,7 @@ label {
 }
 
 #session-client-plugin {
-  margin: 0 0 -4px 0;
+  display: block;
 }
 
 #toggle-scaling {
